--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     
 
   },
+  "homepage": "https://github.com/MaedaKenji/Portofolio",
   "dependencies": {
     "@tailwindcss/vite": "^4.1.10",
     "react": "^19.1.0",
